--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,9 @@
 
 /public/assets
 .byebug_history
+.ruby-version
+Gemfile
+Gemfile.lock
 
 # Ignore master key for decrypting credentials and more.
 /config/master.key
